--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,13 @@
 <div class="contenedor">
+    <div class="logo text-center">
+        <img src="https://img.icons8.com/?size=100&id=yDvdNSDLpjkn&format=png&color=000000" alt="Logo de la Empresa" class="mx-auto mb-4">
+        <h1 class="text-4xl font-bold text-pastel-blue">슈퍼-가게</h1>
+      </div>
+      <hr>
   <div class="flex items-center">
     <p class="text-4xl font-black text-gray-900 dark:text-black">Los mejores productos y los mejores precios a la puerta de tu casa!</p>
     <img class="h-auto max-w-lg ms-auto ml-4" src="https://m.media-amazon.com/images/I/61MaQXBmoSL.jpg" alt="image description">
   </div>
-
   <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
     <div class="grid gap-4">
         <div>
