--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
       </div>
       <hr>
   <div class="flex items-center">
-    <p class="text-4xl font-black text-gray-900 dark:text-black">Los mejores productos y los mejores precios a la puerta de tu casa!</p>
+    <p class="text-4xl font-black text-gray-900 dark:text-black">Los mejores productos 📦 y los mejores precios 💵 a la puerta de tu casa 🏠!</p>
     <img class="h-auto max-w-lg ms-auto ml-4" src="https://m.media-amazon.com/images/I/61MaQXBmoSL.jpg" alt="image description">
   </div>
   <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
@@ -55,5 +55,5 @@
     </div>
   </div>
   <br>
-  <p class="text-4xl font-extrabold text-gray-900 dark:text-black">En cualquier caso de devolución, nosotros nos hacemos responsables tanto de los gastos de envío y el reembolso del dinero.</p>
+  <p class="text-4xl font-extrabold text-gray-900 dark:text-black">En cualquier caso de devolución 💰, nosotros nos hacemos responsables tanto de los gastos de envío 🛩 y el reembolso del dinero 💸.</p>
 </div>
