Proyecto - Figuras de terror

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,59 +1,59 @@
 <div class="contenedor">
     <div class="logo text-center">
-        <img src="https://img.icons8.com/?size=100&id=yDvdNSDLpjkn&format=png&color=000000" alt="Logo de la Empresa" class="mx-auto mb-4">
-        <h1 class="text-4xl font-bold text-pastel-blue">슈퍼-가게</h1>
+        <img src="https://i.postimg.cc/wxmbbG8n/terror.png" alt="Logo de la Empresa" class="mx-auto mb-4">
+        <h1 class="text-4xl font-bold text-pastel-blue">LA CRIPTA DEL COLECCIONISTA</h1>
       </div>
       <hr>
   <div class="flex items-center">
-    <p class="text-4xl font-black text-gray-900 dark:text-black">Los mejores productos 📦 y los mejores precios 💵 a la puerta de tu casa 🏠!</p>
-    <img class="h-auto max-w-lg ms-auto ml-4" src="https://m.media-amazon.com/images/I/61MaQXBmoSL.jpg" alt="image description">
+    <p class="text-4xl font-black text-gray-900 dark:text-black">Las figuras más aterradoras 🧟‍♂️ ¡Al mejor precio y directo a tu cripta! ⚰️🏠!</p>
+    <img class="h-auto max-w-lg ms-auto ml-4" src="https://i.postimg.cc/ZRJ1hP86/TERROR.jpg" alt="image description">
   </div>
   <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
     <div class="grid gap-4">
         <div>
-            <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image.jpg" alt="">
+            <img class="h-auto max-w-full rounded-lg" src="https://i.postimg.cc/fL00DXMT/freddy.jpg" alt="">
         </div>
         <div>
-            <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-1.jpg" alt="">
+            <img class="h-auto max-w-full rounded-lg" src="https://i.postimg.cc/W1bFtxsy/chuky.jpg" alt="">
         </div>
         <div>
-            <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-2.jpg" alt="">
-        </div>
-    </div>
-    <div class="grid gap-4">
-        <div>
-            <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-3.jpg" alt="">
-        </div>
-        <div>
-            <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-4.jpg" alt="">
-        </div>
-        <div>
-            <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-5.jpg" alt="">
+            <img class="h-auto max-w-full rounded-lg" src="https://i.postimg.cc/yNDDy9gX/encapucha.jpg" alt="">
         </div>
     </div>
     <div class="grid gap-4">
         <div>
-            <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-6.jpg" alt="">
+            <img class="h-auto max-w-full rounded-lg" src="https://i.postimg.cc/LsGnCXjd/machete.jpg" alt="">
         </div>
         <div>
-            <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-7.jpg" alt="">
+            <img class="h-auto max-w-full rounded-lg" src="https://i.postimg.cc/NMTLWcxK/penny.jpg" alt="">
         </div>
         <div>
-            <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-8.jpg" alt="">
+            <img class="h-auto max-w-full rounded-lg" src="https://i.postimg.cc/Kj24bH9J/pennyw.jpg" alt="">
         </div>
     </div>
     <div class="grid gap-4">
         <div>
-            <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-9.jpg" alt="">
+            <img class="h-auto max-w-full rounded-lg" src="https://i.postimg.cc/28C3XgL5/saw.jpg" alt="">
         </div>
         <div>
-            <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-10.jpg" alt="">
+            <img class="h-auto max-w-full rounded-lg" src="https://i.postimg.cc/Y91qdxpg/lobo.jpg" alt="">
         </div>
         <div>
-            <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-11.jpg" alt="">
+            <img class="h-auto max-w-full rounded-lg" src="https://i.postimg.cc/T2J3mQNv/loco.jpg" alt="">
+        </div>
+    </div>
+    <div class="grid gap-4">
+        <div>
+            <img class="h-auto max-w-full rounded-lg" src="https://i.postimg.cc/vH8Hv9Cg/globo.png" alt="">
+        </div>
+        <div>
+            <img class="h-auto max-w-full rounded-lg" src="https://i.postimg.cc/K8RG6bGm/monja.jpg" alt="">
+        </div>
+        <div>
+            <img class="h-auto max-w-full rounded-lg" src="https://i.postimg.cc/jdCY5hGX/vampiro.jpg" alt="">
         </div>
     </div>
   </div>
   <br>
-  <p class="text-4xl font-extrabold text-gray-900 dark:text-black">En cualquier caso de devolución 💰, nosotros nos hacemos responsables tanto de los gastos de envío 🛩 y el reembolso del dinero 💸.</p>
+  <p class="text-4xl font-extrabold text-gray-900 dark:text-black">Si alguna figura no cumple tus pesadillas... 😱💰, ¡Nos encargamos del envío de vuelta 📦 y el reembolso del dinero 💸.</p>
 </div>
