--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <nav class="border-gray-200 bg-indigo-500 dark:bg-blue-500 dark:border-gray-700">
     <div class="max-w-screen-x2 flex flex-wrap items-center justify-between mx-auto p-6">
         <a routerLink="" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img src="https://i.postimg.cc/wxmbbG8n/terror.png" class="h-8"
-                alt="Rincon del Horror Logo" />
+            <img src="https://i.postimg.cc/wxmbbG8n/terror.png" class="h-8" alt="Rincon del Horror Logo" />
             <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Rincon del Horror</span>
         </a>
         <button data-collapse-toggle="navbar-solid-bg" type="button"
@@ -29,6 +28,14 @@
                 <li>
                     <a routerLink="nosotros"
                         class="block py-2 px-3 md:p-0 text-white rounded-sm hover:bg-indigo-500 md:hover:bg-transparent md:border-0 md:hover:text-blue-300 dark:text-white md:dark:hover:text-blue-300 dark:hover:bg-indigo-700 dark:hover:text-white md:dark:hover:bg-transparent">Nosotros</a>
+                </li>
+                <li>
+                    <a routerLink="registro"
+                        class="block py-2 px-3 md:p-0 text-white rounded-sm hover:bg-indigo-500 md:hover:bg-transparent md:border-0 md:hover:text-blue-300 dark:text-white md:dark:hover:text-blue-300 dark:hover:bg-indigo-700 dark:hover:text-white md:dark:hover:bg-transparent">Registro</a>
+                </li>
+                <li>
+                    <a routerLink="Iniciar Sesión"
+                        class="block py-2 px-3 md:p-0 text-white rounded-sm hover:bg-indigo-500 md:hover:bg-transparent md:border-0 md:hover:text-blue-300 dark:text-white md:dark:hover:text-blue-300 dark:hover:bg-indigo-700 dark:hover:text-white md:dark:hover:bg-transparent">Iniciar Sesión</a>
                 </li>
             </ul>
         </div>
